Added new image credits and added image links
Allows for image to show up on webpage and for
image owners to be credited

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
 
-        <div class="image"></div>
+        <div class="image"><img src="img/logo.jpg" alt="A mandarin on a table with a pile of books and a cup"></div>
 
         <div class="text">
             <h1>Distributing Food and Books for Everybody</h1>
@@ -32,19 +32,19 @@
         <div class="text">Fresh Like Mandarin</div>
         <div class="illustration">
             <div class="info">
-                <div class="image"></div>
+                <div class="image"><img src="img/ill-1.jpg" alt="A scatter of green vegetables on a table"></div>
                 <p>Distributing healthy and fresh ingredients</p>
             </div>
             <div class="info">
-                <div class="image"></div>
+                <div class="image"><img src="img/ill-2.jpg" alt="A pile of books"></div>
                 <p>An Interesting and Diverse Library of Books</p>
             </div>
             <div class="info">
-                <div class="image"></div>
+                <div class="image"><img src="img/ill-3.jpg" alt="A big box with a pile of books on top"></div>
                 <p>New Books Every Month</p>
             </div>
             <div class="info">
-                <div class="image"></div>
+                <div class="image"><img src="img/ill-4.jpg" alt="A map of a city with pins that mark locations"></div>
                 <p>Fast Delivery with Local Stations in North American Cities</p>
             </div>
         </div>
