Implemented base css file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Mandarin</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <div class="header">
         <div class="logo">Mandarin</div>
         <div class="right-links">
@@ -22,8 +22,8 @@
         <div class="image"><img src="img/logo.jpg" alt="A mandarin on a table with a pile of books and a cup"></div>
 
         <div class="text">
-            <h1>Distributing Food and Books for Everybody</h1>
-            <p>A distributing service for all the book and food lovers.</p>
+            <p class="main-text">Distributing Food and Books for Everybody</p>
+            <p class="secondary-text">A distributing service for all the book and food lovers.</p>
         </div>
         <div class="button"><button>Sign up</button></div>
     </div>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="quote">
-        <p>I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for someone who
+        <p class="speech">I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for someone who
             might not have enough time to buy food, but wants to have a cozy time with a snack and a book.
         </p>
         <p> - Jamison Jones</p>
