Implemented css for header html section

--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 
 <body>
     <div class="header">
-        <div class="logo">Mandarin</div>
-        <div class="right-links">
-            <ul>
-                <li><a href="#">Free Trial</a></li>
-                <li><a href="#">Book Services</a></li>
-                <li><a href="#">Food Services</a></li>
-            </ul>
+        <div class="top">
+            <div class="logo">Mandarin</div>
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">Free Trial</a></li>
+                    <li><a href="#">Book Services</a></li>
+                    <li><a href="#">Food Services</a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="image"><img src="img/logo.jpg" alt="A mandarin on a table with a pile of books and a cup"></div>
-
-        <div class="text">
-            <p class="main-text">Distributing Food and Books for Everybody</p>
-            <p class="secondary-text">A distributing service for all the book and food lovers.</p>
+        <div class="content">
+            <div class="text">
+                <p class="main-text">Distributing Food and Books for Everybody</p>
+                <p class="secondary-text">A distributing service for all the book and food lovers.</p>
+                <div class="button"><button>Sign up</button></div>
+            </div>
+            <div class="image"><img src="img/logo.jpg" alt="A mandarin on a table with a pile of books and a cup"></div>
         </div>
-        <div class="button"><button>Sign up</button></div>
+        
     </div>
 
     <div class="information">
@@ -51,7 +55,8 @@
     </div>
 
     <div class="quote">
-        <p class="speech">I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for someone who
+        <p class="speech">I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for
+            someone who
             might not have enough time to buy food, but wants to have a cozy time with a snack and a book.
         </p>
         <p> - Jamison Jones</p>
