Implemented css for website likeness

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="image"><img src="img/logo.jpg" alt="A mandarin on a table with a pile of books and a cup"></div>
         </div>
-        
+
     </div>
 
     <div class="information">
@@ -59,14 +59,16 @@
             someone who
             might not have enough time to buy food, but wants to have a cozy time with a snack and a book.
         </p>
-        <p> - Jamison Jones</p>
+        <p class="author"> - Jamison Jones</p>
     </div>
 
     <div class="sign-up">
         <div class="sign-up-box">
             <div class="text">
-                <p>Call to action! It's time!</p>
-                <p>Sign up to Mandarin and click the button there!</p>
+                <div class="header-box">
+                    <p class="top-header">Call to action! It's time!</p>
+                </div>
+                <p class="bottom-header">Sign up to Mandarin and click the button there!</p>
             </div>
             <div class="button"><button>Sign up</button></div>
         </div>
