Added right font family using link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandarin</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -55,10 +56,10 @@
     </div>
 
     <div class="quote">
-        <p class="speech">I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for
+        <div class="speech">I am a huge book lover! And of course, I love food too. Mandarin makes it so convenient for
             someone who
             might not have enough time to buy food, but wants to have a cozy time with a snack and a book.
-        </p>
+        </div>
         <p class="author"> - Jamison Jones</p>
     </div>
 
@@ -68,7 +69,7 @@
                 <div class="header-box">
                     <p class="top-header">Call to action! It's time!</p>
                 </div>
-                <p class="bottom-header">Sign up to Mandarin and click the button there!</p>
+                <p class="bottom-header">Sign up to Mandarin and click the button right over there!</p>
             </div>
             <div class="button"><button>Sign up</button></div>
         </div>
